--- a/index.html
+++ b/index.html
@@ -3,65 +3,36 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- Custom CSS -->
+  <link rel="cssreset" type="text/css" href="./assets/css/reset.css">  
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">  
+  
   <title>Psychic Game</title>
 </head>
 
 <body>
 
-    <div>
+
+    <div class="container-left">
         <h1>The Psychic Game</h1>
-        <h3>Guess what letter I'm thinking of?</h3>
+        <h3>Guess what letter the Sith Lord is thinking of?</h3>
+
+        <div class="container-counter">
+            <h5>WINS:</h5>
+            <h5>LOSSES:</h3>
+            <h5>GUESSES LEFT:</h3>
+            <h5>YOUR GUESSES SO FAR:</h3>
+              <div id="userchoice"></div>
+              <div id="comchoice"></div>
+              <div id="userGuess"></div>
+        </div>
+
     </div>
-
-    <div>
-        <h5>WINS:</h3>
-    </div>
-
-    <div>
-        <h5>LOSSES:</h3>
-    </div>
-
-    <div>
-        <h5>GUESSES LEFT:</h3>
-    </div>
-
-    <div>
-        <h5>YOUR GUESSES SO FAR:</h3>
-    </div>
-
-  <div>
-    <p id="#"></p>
-    <p id="#"></p>
-  </div>
-
-  <!-- JAVA SCRIPT RPS EXAMPLE AS GUIDE 
-  <script type="text/javascript">
-    // Creates an array that lists out all of the options (Rock, Paper, or Scissors).
-    var computerChoices = ["r", "p", "s"];
-
-    // Create variables that hold references to the places in the HTML where we want to display things.
-    var userChoiceText = document.getElementById("userchoice-text");
-    var computerChoiceText = document.getElementById("computerchoice-text");
-
-    // This function is run whenever the user presses a key.
-    document.onkeyup = function(event) {
-
-      // Determines which key was pressed.
-      var userGuess = event.key;
-
-      // Randomly chooses a choice from the options array. This is the Computer's guess.
-      var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
-
-      // Only run the following code block if the user presses "r" or "p" or "s".
-      if ((userGuess === "r") || (userGuess === "p") || (userGuess === "s")) {
-        // Display the user and computer guesses.
-        userChoiceText.textContent = "You chose: " + userGuess;
-        computerChoiceText.textContent = "The computer chose: " + computerGuess;
-      }
-
-    };
-  </script> -->
+  <script src="./assets/javascript/game.js">
+  </script>
 
 </body>
-
 </html>
