--- a/index.html
+++ b/index.html
@@ -14,25 +14,80 @@
 </head>
 
 <body>
+  <div class="container-left"> 
+        <h1>Welcome to the Psychic Game, I knew you'd arrive.</h1>
 
-
-    <div class="container-left">
-        <h1>The Psychic Game</h1>
-        <h3>Guess what letter the Sith Lord is thinking of?</h3>
-
-        <div class="container-counter">
-            <h5>WINS:</h5>
-            <h5>LOSSES:</h3>
-            <h5>GUESSES LEFT:</h3>
-            <h5>YOUR GUESSES SO FAR:</h3>
-              <div id="userchoice"></div>
-              <div id="comchoice"></div>
-              <div id="userGuess"></div>
+        <div>    
+            <p id="directions-text">I've choosen a random letter between A and Z. Try to guess the letter in 10 tries or less.</p>
+            <div class="form"> 
+                <label for="guessField">Enter a guess: </label><input type="text" id="guessField" class="guessField"> 
+                <input type="submit" value="Submit guess" class="guessSubmit">
+              </div>
+            <p id="userchoice-text"></p>
+            <p id="computerchoice-text"></p>
+            <p id="wins-text"></p>
+            <p id="losses-text"></p>
+            <p id="ties-text"></p>
         </div>
+  </div>
+
+
+  <script type="text/javascript">
+    // Creates an array of letter choices.
+    var computerChoices = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z"];
+
+    // Creating variables to hold the number of wins, losses, and ties. They start at 0.
+    var wins = 0;
+    var losses = 0;
+    var guessesLeft = 9; 
+    var playerGuesses = [i];
+
+    // Create variables that hold references to the places in the HTML where we want to display things.
+    var directionsText = document.getElementById("directions-text");
+    var userChoiceText = document.getElementById("userchoice-text");
+    var computerChoiceText = document.getElementById("computerchoice-text");
+    var winsText = document.getElementById("wins-text");
+    var lossesText = document.getElementById("losses-text");
+    var tiesText = document.getElementById("ties-text");
+
+    // This function is run whenever the user presses a key.
+    document.onkeyup = function(event) {
+
+      // Determines which key was pressed.
+      var userGuess = event.key;
+
+      // Randomly chooses a choice from the options array. This is the Computer's guess.
+      var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
+
+      // Reworked our code from last step to use "else if" instead of lots of if statements.
+
+      // This logic determines the outcome of the game (win/loss/tie), and increments the appropriate number
+      if ((userGuess === computerGuess)) {{
+          wins++;
+        } else if (userGuess === computerGuess) {
+          ties++;
+        } else {
+          losses++;
+        }
+
+        // Hide the directions
+        directionsText.textContent = "";
+
+        // Display the user and computer guesses, and wins/losses/ties.
+        userChoiceText.textContent = "You chose: " + userGuess;
+        computerChoiceText.textContent = "The computer chose: " + computerGuess;
+        winsText.textContent = "wins: " + wins;
+        lossesText.textContent = "losses: " + losses;
+        tiesText.textContent = "ties: " + ties;
+      }
+    };
+  </script>
+
 
     </div>
-  <script src="./assets/javascript/game.js">
-  </script>
+
+<!-- <script src="./assets/javascript/game.js">
+  </script> -->
 
 </body>
 </html>
